--- a/content/supplement/ordinals/basic.mdx
+++ b/content/supplement/ordinals/basic.mdx
@@ -127,11 +127,16 @@ Ordinals 协议最初由 [Casey](https://x.com/rodarmor) 在 2022 年提出, 是
   ]}
 />
 
-根据聪在交易中的转移遵循先进先出的原则, 可以确定交易输出中的聪的编号范围:
+聪在交易中的转移遵循先进先出的原则, 可以确定交易输出中的聪的编号范围:
 
-- 输出 0 的聪的编号范围在 $0 \sim 1999999999$
-- 输出 1 的聪的编号范围在 $2000000000 \sim 4999999999$
+- 输出 0 的聪编号范围在 $0 \sim 1999999999$
+- 输出 1 的聪编号范围在 $2000000000 \sim 4999999999$
 
 ## 铭刻
 
-聪的铭刻是指给聪绑定数据, 例如文本、序列化的图片等。铭刻的数据可以通过追踪聪的转移来确定所有权。
+聪的铭刻是指给聪所在的 `UTXO` 绑定数据, 例如文本、序列化的图片等。铭刻的数据可以通过追踪聪的转移来确定所有权。
+
+铭刻数据的方式有很多, 例如:
+
+- [BRC-20](/supplement/ordinals/brc20)
+- [Rune](/supplement/ordinals/rune)
