--- a/content/technical/miner/memory-pool.mdx
+++ b/content/technical/miner/memory-pool.mdx
@@ -8,9 +8,9 @@ title: 内存池
 
 在节点收到一笔交易后, 首先会验证交易的有效性, 比如检查交易的签名是否正确、交易费率是否大于节点设置的费率、内存池中是否有花费相同输入的交易等。如果交易通过了验证, 则会被添加到内存池中并转发到已知的其它网络节点。
 
-:::warning
+:::note
 
-内存池中的交易可以花费另一个仍在内存池中的交易的输出。但必须等待这个交易被打包进区块后, 才能挖矿这个新的交易。这两个交易可以称作父子交易。父交易必须先被打包, 子交易才能被打包。
+内存池中的交易(子)可以花费另一个仍在内存池中的交易(父)的输出, 这两个交易可以称作父子交易。打包时, 父交易必须排在子交易前面, 可以是同一个区块, 也可以是不同区块。
 
 子交易也可以有子交易, 但是有一个限制：从初始的父交易开始, 最多只能有 25 个后代交易。
 
