feat: brc20 commit address

--- a/content/supplement/ordinals/brc20.mdx
+++ b/content/supplement/ordinals/brc20.mdx
@@ -2,7 +2,24 @@
 title: Brc20
 ---
 
+`Brc20` 数据存储基于 `Taproot`, 数据存储在脚本树的节点中。
+
+<ScaleableImage
+  src='/inscription-taptree.png'
+  alt='taproot-out-explain'
+/>
+
+由随机生成密的钥对, 计算出公钥的 $X$ 坐标作为内部公钥。结合脚本树的 $t$ 值, 计算出 `Taproot` 输出公钥 $Q$ 。`bech32m` 编码后得到 `Taproot` 地址。
+
+当向该地址转账时, 会得到一个 `UTXO`, 其锁定脚本为 `OP_1 <Taproot 输出公钥>`, 类型为 `P2TR`。但是, 该 `UTXO` 并没有包含任何 `Brc20` 的数据。而要使 `Brc20` 数据显式存储在链上, 必须要花费该 `UTXO`。并且花费路径只能选择脚本路径, 因为脚本路径花费时需要提供要花费脚本的完整数据, 如此便实现数据链上存储。
+
+故 `Brc20` 交易都需要包含两笔交易。第一笔交易称作 `commit` 交易, 第二笔交易称作 `reveal` 交易
+
+## 计算 Taproot 地址
+
 <Brc20Pub />
+
+## Commit 交易
 
 两笔交易
 208ac66a3c51520a65f500edf36516a51e0f6ee3929f795c4495cdaddb0bed4424ac0063036f7264010118746578742f706c61696e3b636861727365743d7574662d3800337b2270223a226272632d3230222c226f70223a226d696e74222c227469636b223a2273617473222c22616d74223a223130227d68
