--- a/content/technical/keys/hd-wallet.mdx
+++ b/content/technical/keys/hd-wallet.mdx
@@ -196,7 +196,7 @@ if (index < 2147483648) {
 
 :::danger
 
-助记词的目的是为了提供一种更友好的方式来记忆 `seed`。 如果你有更安全且方便的方法来保存 `seed`, 那么助记词就不是必须的。
+助记词的目的是为了提供一种更友好的方式来记忆 `seed`。 如果你有更安全且方便的方法来保存 `seed`, 那么助记词就不是必须的。例如, 你可以用你喜欢的一句话转成 16 进制作为 `seed`。
 
 :::
 
