--- a/content/supplement/ordinals/brc20.mdx
+++ b/content/supplement/ordinals/brc20.mdx
@@ -9,20 +9,33 @@ title: Brc20
   alt='taproot-out-explain'
 />
 
-由随机生成密的钥对, 计算出公钥的 $X$ 坐标作为内部公钥。结合脚本树的 $t$ 值, 计算出 `Taproot` 输出公钥 $Q$ 。`bech32m` 编码后得到 `Taproot` 地址。
+由随机生成密钥, 计算出公钥的 $X$ 坐标作为内部公钥。结合脚本树的 $t$ 值, 计算出 `Taproot` 输出公钥 $Q$ 。`bech32m` 编码后得到 `Taproot` 地址。
 
-当向该地址转账时, 会得到一个 `UTXO`, 其锁定脚本为 `OP_1 <Taproot 输出公钥>`, 类型为 `P2TR`。但是, 该 `UTXO` 并没有包含任何 `Brc20` 的数据。而要使 `Brc20` 数据显式存储在链上, 必须要花费该 `UTXO`。并且花费路径只能选择脚本路径, 因为脚本路径花费时需要提供要花费脚本的完整数据, 如此便实现数据链上存储。
+当向该地址转账时, 会得到一个 `UTXO`, 其锁定脚本为 `OP_1 <Taproot 输出公钥>`, 类型为 `P2TR`。但是, 该 `UTXO` 并没有包含任何 `Brc20` 的数据。而要使 `Brc20` 数据显式存储在链上, 必须要同时花费该 `UTXO`。并且花费路径只能选择脚本路径, 因为脚本路径花费时需要提供要花费脚本的完整数据, 如此便实现数据链上存储。
 
-故 `Brc20` 交易都需要包含两笔交易。第一笔交易称作 `commit` 交易, 第二笔交易称作 `reveal` 交易
+故 `Brc20` 交易都需要包含两笔交易:
+
+- 第一笔交易称作 `commit` 交易, 用于向生成的 `Taproot` 地址转账
+- 第二笔交易称作 `reveal` 交易, 用于花费 `commit` 交易生成的 `UTXO`
+
+:::note
+
+向生成的 `Taproot` 地址转账时, 需要转账足够的聪。避免花费时因为交易费不足导致的交易无法确认。
+
+:::
 
 ## 计算 Taproot 地址
 
 <Brc20Pub />
 
+随机生成的内部秘钥对用于生成临时的 `Taproot` 地址
+
 ## Commit 交易
 
+生成 `Taproot` 地址后, 需要向该地址转账。即花费自己可解锁的 `UTXO` 向 `Taproot` 地址转账。转账金额需要根据当前比特币网络的费率确定。
+
 两笔交易
-208ac66a3c51520a65f500edf36516a51e0f6ee3929f795c4495cdaddb0bed4424ac0063036f7264010118746578742f706c61696e3b636861727365743d7574662d3800337b2270223a226272632d3230222c226f70223a226d696e74222c227469636b223a2273617473222c22616d74223a223130227d68
+
 Commit: https://mempool.space/tx/26877b8e3d64a8688ba01f7fa62c26e2b4f4034dfb44029246c92643b2f1a93b
 Reveal: https://mempool.space/tx/00274fdd890873da479a51896f328665a71d2f3c1dff00fbb20155e9fcda2c50
 
@@ -52,3 +65,7 @@ OP_IF                                                                # 开始条
     OP_PUSHBYTES_57 7b2270223a...                                   # BRC-20
 OP_ENDIF
 ```
+
+## Reveal 交易
+
+## 索引器
