feat: brc20 commit tx

--- a/content/supplement/ordinals/brc20.mdx
+++ b/content/supplement/ordinals/brc20.mdx
@@ -11,7 +11,7 @@ title: Brc20
 
 由随机生成内部私钥, 计算出公钥的 $X$ 坐标作为内部公钥。结合脚本树的 $t$ 值, 计算出 `Taproot` 输出公钥 $Q$ 。`bech32m` 编码后得到 `Taproot` 地址。
 
-`Brc20` 交易会向该地址转账, 并输出一个 `UTXO`, 其锁定脚本为 `OP_1 <Taproot 输出公钥>`, 类型为 `P2TR`。但是, 该转账交易中并没有包含任何 `Brc20` 的数据。而要使 `Brc20` 数据显式存储在链上, 必须要同时花费该 `UTXO`。并且花费路径只能选择脚本路径, 因为脚本路径花费时需要提供要花费脚本的完整数据, 如此便实现数据链上存储。
+`Brc20` 交易首先会向该地址转账, 并输出一个 `UTXO`, 其锁定脚本为 `OP_1 <Taproot 输出公钥>`, 类型为 `P2TR`。但是, 该转账交易中并没有包含任何 `Brc20` 的数据。而要使 `Brc20` 数据显式存储在链上, 必须要同时花费该 `UTXO`。并且花费路径只能选择脚本路径, 因为脚本路径花费时需要提供要花费脚本的完整数据, 如此便实现数据链上存储。
 
 故 `Brc20` 交易都需要同时包含两笔交易:
 
@@ -30,7 +30,7 @@ title: Brc20
 
 <Brc20Pub />
 
-随机生成的内部秘钥对用于生成临时的 `Taproot` 地址。为了安全性, 每次 `Brc20` 交易通常需要生成一个新的 `Taproot` 地址。
+随机生成的内部秘钥用于生成临时的 `Taproot` 地址。为了安全性, 每次 `Brc20` 交易通常需要生成一个新的 `Taproot` 地址。
 
 ## Commit 交易
 
@@ -46,9 +46,9 @@ title: Brc20
 }
 ```
 
-唯一需要确定的是转账金额, 转账金额需要根据当前比特币网络的费率以及花费该 `UTXO` 所在交易(`Reveal` 交易)的字节大小确定。
+三个字段中唯一需要确定的是转账金额, 转账金额需要根据当前比特币网络的费率以及花费该 `UTXO` 所在交易(`Reveal` 交易)的字节大小确定。
 
-`Reveal` 交易花费该 `UTXO` 需要提供的解锁脚本在 `witness` 字段中, 以及输出一个包含546聪的新 `UTXO` 给 `Brc20` 数据的所有者。
+`Reveal` 交易只需要的输入只有该 `UTXO`, 并且提供的解锁脚本在 `witness` 字段中, 以及输出一个包含546聪的新 `UTXO` 给 `Brc20` 数据的所有者。
 
 `Reveal` 交易的 `witness` 字段包含三个部分:
 
@@ -60,7 +60,7 @@ witness: [
 ]
 ```
 
-`witness` 字段数据的大小可以确定, 交易输出的大小也可以确定。整个 `Reveal` 交易的大小也可以确定。根据当前网络费率, 转账金额可以确定。
+`witness` 字段数据的大小可以确定, 交易输出的大小也可以确定, 整个 `Reveal` 交易的大小便可以确定。根据当前网络费率, 转账金额可以确定。
 
 例如有如下 `Reveal` 交易
 
@@ -74,13 +74,15 @@ witness: [
 
 `Commit` 交易中如果所有输入的 `UTXO` 金额扣除当前交易费和转账金额 `85046 sat` 后的结果大于或等于 `546 sat`, 还需要找零给原地址。
 
-:::note 546 sat
+:::warning 为什么是 546 sat ?
 
 `546 sat` 在比特币交易中被称为 `dust limit`, 是 `UTXO` 包含的的最小金额。 低于这个金额的交易, 会被比特币网络拒绝。
 
 :::
 
 ## Reveal 交易
+
+`Reveal` 交易用于花费 `Commit` 交易输出的 `UTXO`, 并且在花费时提供花费脚本。
 
 ## 索引器
 
