--- a/content/supplement/ordinals/brc20.mdx
+++ b/content/supplement/ordinals/brc20.mdx
@@ -48,7 +48,7 @@ title: Brc20
 
 三个字段中唯一需要确定的是转账金额, 转账金额需要根据当前比特币网络的费率以及花费该 `UTXO` 所在交易(`Reveal` 交易)的字节大小确定。
 
-`Reveal` 交易只需要的输入只有该 `UTXO`, 并且提供的解锁脚本在 `witness` 字段中, 以及输出一个包含546聪的新 `UTXO` 给 `Brc20` 数据的所有者。
+`Reveal` 交易的输入只有该 `P2TR` 类型的 `UTXO`, 并且提供的解锁脚本在 `witness` 字段中, 以及输出一个包含546聪的新 `UTXO` 给 `Brc20` 数据的所有者。
 
 `Reveal` 交易的 `witness` 字段包含三个部分:
 
@@ -60,7 +60,7 @@ witness: [
 ]
 ```
 
-`witness` 字段数据的大小可以确定, 交易输出的大小也可以确定, 整个 `Reveal` 交易的大小便可以确定。根据当前网络费率, 转账金额可以确定。
+`witness` 字段数据的大小可以预先确定, 交易输出的大小也可以预先确定, 整个 `Reveal` 交易的大小便可以确定。根据当前网络费率, 转账金额可以确定。
 
 例如有如下 `Reveal` 交易
 
@@ -72,7 +72,7 @@ witness: [
 
 通过预先计算 `Reveal` 交易的大小为 `138vB`, 假设当前网络的费率是 `612.3 sat/vB`。总手续费需要 $138 * 612.3 \approx 84500 sat$, 加上需要最低的转账金额 `546 sat`。所以 `Commit` 交易需要给生成的 `Taproot` 地址转 `84500 + 546 = 85046 sat`。
 
-`Commit` 交易中如果所有输入的 `UTXO` 金额扣除当前交易费和转账金额 `85046 sat` 后的结果大于或等于 `546 sat`, 还需要找零给原地址。
+在 `Commit` 交易中如果所有输入的 `UTXO` 金额扣除当前交易费和转账金额 `85046 sat` 后的结果大于或等于 `546 sat`, 还需要找零给原地址。
 
 :::warning 为什么是 546 sat ?
 
