--- a/content/supplement/ordinals/rune.mdx
+++ b/content/supplement/ordinals/rune.mdx
@@ -2,7 +2,9 @@
 title: Rune
 ---
 
-# TODO
+#### TODO
+
+数据存储在 `OP_RETURN` 中
 
 https://mempool.space/testnet/tx/1ce9669c2d8ce23cc38bf3ccfe9ec34523af61399db1e2313e9baf88d4266938
 
