--- a/content/about.mdx
+++ b/content/about.mdx
@@ -2,7 +2,7 @@
 title: 关于
 ---
 
-import { X } from 'lucide-react'
+import { Star } from 'lucide-react'
 
 ## 关于本站
 
@@ -12,21 +12,17 @@ import { X } from 'lucide-react'
 - 挖矿的原理
 - 比特币地址的生成
 - 构造比特币交易以及签名
-- 不同比特币脚本的解锁和锁定原理
+- 不同比特币脚本的解锁和锁定原理等
 
 另外, 本站也提供了相当多的工具和代码示例, 包括区块和交易数据的详细字段标注、 不同比特币地址生成的详细过程、签名数据的计算步骤、脚本执行栈的模拟等等。
 
-而后续更新将主要集中在密码学和比特币的拓展协议上, 包括 `Ordinals` 协议、闪电网络等。
-
-最后, 本教程完全免费。 如果你觉得对你有所帮助, 请分享给你的朋友, 或者在 [github](https://github.com/heapup-tech/bitcoin-ninja) 上给本仓库点一个 `star`, 您的支持是我持续更新的最大动力。
+最后, 本教程完全免费。 如果你觉得对你有所帮助, 请分享给你的朋友, 或者在 [github](https://github.com/heapup-tech/bitcoin-ninja) 上给本仓库点一个 <Star className='inline-block align-middle' size={16}/>, 您的支持是我持续更新的最大动力。
 
 ## 关于作者
 
-自2015年毕业后一直从事互联网行业的开发工作, 待过大厂, 也待过小厂。在技术栈方面, 开发的大部分方向均有所涉及, 但目前主要以前端 `React` 为主。
+自 2015 年毕业后一直从事互联网行业的开发工作, 几年前开始进入区块链行业, 并开始学习以太坊, 同大多数从业开发者一样, 也是从 `Solidity` 开始, 接触智能合约, 从而解锁更深层次的区块链技术, 甚至于拓展到其他公链。
 
-几年前开始进入区块链行业, 契机则是不知道什么时候买的 `SHIB` 翻倍了。自此之后开始学习以太坊, 同大多数从业开发者一样, 也是从 `Solidity` 开始, 接触智能合约, 从而解锁更深层次的区块链技术, 甚至于拓展到其他公链。这点在 [我的博客](https://www.syen.me) 中, 有着更加详细的体现。
-
-直到 2023 年, `Ordinals` 协议的爆火, 使我开始关注并学习比特币。期间发现了很多优秀的文章, 但大多数内容比较分散, 亦或是内容晦涩难懂。因此, 我决定自己写一份比特币的教程, 方便其他人了解和学习区块链行业并降低进入这个行业的门槛。
+直到 2023 年, `Ordinals` 协议的爆火, 使我开始关注并学习比特币。期间看了很多优秀的文章, 但大多数内容比较分散, 亦或是内容晦涩难懂。因此, 我决定自己写一份比特币的教程, 方便其他人了解和学习区块链行业并降低进入这个行业的门槛。
 
 最后, 如果你在学习过程遇到问题, 欢迎添加微信群讨论。 或者私信我, 我会尽力帮助你解决问题。
 
@@ -37,7 +33,7 @@ import { X } from 'lucide-react'
 
 我的联系方式:
 
-Twitter - [Syen](https://twitter.com/syen_white)
+Twitter - [午时已到](https://twitter.com/syen_white)
 
 微信号(Base64) - `c3llbl93aGl0ZQ==`
 
