feat: update ecc

--- a/content/cryptology/ecc/ecc.mdx
+++ b/content/cryptology/ecc/ecc.mdx
@@ -263,7 +263,7 @@ $$
 
 <FiniteEccGraph p={5} />
 
-从图中可以看出, 相同 $x$ 坐标, 会有一个关于 $\frac {p}{2}$ 的对称点。
+从图中可以看出, 相同 $x$ 坐标, 会有一个关于 $\frac {p}{2}$ 的对称点。并且相同 $x$ 坐标的 $y$ 坐标值一个是奇数一个是偶数。
 
 ### 点加
 
