feat: update psbt

--- a/content/technical/keys/psbt.mdx
+++ b/content/technical/keys/psbt.mdx
@@ -257,7 +257,7 @@ console.log(psbt.data.inputs[1])
 
 :::warning
 
-PSBT 为花费别人的 `UTXO` 提供了一种标准的数据交换格式。
+PSBT 为需要多方参与的交易提供了一种标准的数据交换格式。但同样也可以用于单方签名的交易。
 
 :::
 
