--- a/content/supplement/ordinals/rune.mdx
+++ b/content/supplement/ordinals/rune.mdx
@@ -1,7 +1,9 @@
 ---
-title: Rune
+title: Runes
 draft: true
 ---
+
+Runes 协议由 [Casey Rodarmor](https://x.com/rodarmor) 于比特币第四次减半区块高度 840000 正式发布。并发文表示, 如果 Runes 生态上线一个月达不到10亿美元市值将切腹自尽。
 
 :::note
 
