feat: symbol unicode decode

--- a/content/supplement/ordinals/rune.mdx
+++ b/content/supplement/ordinals/rune.mdx
@@ -62,6 +62,8 @@ pub(super) enum Tag {
 
 ## 编解码
 
+<TransactionDecipher />
+
 ## 部署Runes
 
 部署 Runes 的过程也称作蚀刻 Etching, 用于定义 Runes 的属性和铸造规则。
@@ -524,8 +526,4 @@ pub(super) fn index_runes(&mut self, tx_index: u32, tx: &Transaction, txid: Txid
 
     Ok(())
   }
-```
-
-```
-
 ```
