feat: rune deploy transaction

--- a/content/supplement/ordinals/brc20.mdx
+++ b/content/supplement/ordinals/brc20.mdx
@@ -49,7 +49,7 @@ OP_ENDIF
 
 - `OP_FALSE`: 等同于 `OP_0`, 作用是将数字 0 推入栈中
 
-- `OP_IF`: 条件块开始, 从栈顶弹出一个元素, 如果为真(非0)则执行条件块内的脚本, 否则跳过。由于栈顶元素是0, 所以条件块内的脚本永远不会被执行。脱离 `Brc20` 背景, 条件块内的脚本实际是一段冗余数据, 这也是 `Brc20` 经常被诟病的原因。
+- `OP_IF`: 条件块开始, 从栈顶弹出一个元素, 如果为真(非0)则执行条件块内的脚本, 否则跳过。由于栈顶元素是0, 所以条件块内的脚本永远不会被执行。脱离 `Brc20` 背景, 条件块内的脚本实际是一段冗余数据。
 
 - `text/plain;charset=utf-8`: 表示数据的 [MIME](https://en.wikipedia.org/wiki/MIME) 类型, 如果是图片数据, 则可以是 `image/png`
 
